Set z-index of fact-new to make sure Bootstrap tooltips are on top of our popovers.

--- a/core/app/assets/stylesheets/facts/facts_new.css.less
+++ b/core/app/assets/stylesheets/facts/facts_new.css.less
@@ -1,3 +1,4 @@
 div.fact-new {
   position: relative;
+  z-index: 1; // should be lower than Twitter tooltip z-index
 }
